Release 1.8.0 (2016-01-26)
==========================

* Encrypted sessions can now specify nonce length for salt generation through ``encrypt_nonce_bits`` parameter.
  set it to ``48`` for backward compatibility with sessions generated before 1.8.0
* kwargs support in @cache_region decorator
* annotations support in @cache_region decorator
* data_serializer parameter in Session can now specify ``json`` to avoid pickle security issues
* Invalid cookies are now skipped in cookie based sessions
* Memcached based on PyLibMC now share same connection pool for same url

Release 1.7.0 (2015-04-20)
==========================

* Beaker no longer supports python 2.4 and 2.5
* Beaker now supports Python 2.6, 2.7, 3.2, 3.3, 3.4 without 2to3 usage
* Fixed Encrypted Cookie Session on Python3 #57
* New pbkdf2 mobule working on Python3 #21
* Fixed Test suite on Python 3.3 #53, #51

Release 1.6.5 (2015-02-06)
==========================

* @cached decorator now keeps docstring of decorated method.
* Fix crash when Session ``accessed_time`` is not available, this happened
  when session ``encrypt_key`` was changed.
* Fix cache regions not providing a default key length even though this was
  required and examples in the doc didn't provide it.
* Fix crash when cache expire wasn't an int, this happened when caching options
  were loaded from a config file.

Release 1.6.4 (8/13/2012)
=========================

.. warning::

    Session hashing for encrypted sessions using PyCrypto has changed. This
    will result in sessions being invalidated upon upgrading if PyCrypto is
    used.

* Fix bug with key_length not being coerced to a int for comparison. Patch by
  Greg Lavallee.
* Fix bug with cookie invalidation not clearing the cookie data. Patch by
  Vasiliy Lozovoy.
* Added ability to pass in cookie_path for the Session. Patch by Marcin
  Kuzminski.
* Add NSS crypto support to Beaker. Patch by Miloslav Trmac of Redhat.