@@ -106,8 +106,9 @@ class SessionMiddleware(object):
 
         # Load up the default params
         self.options = dict(invalidate_corrupt=True, type=None,
-                           data_dir=None, key='beaker.session.id',
-                           timeout=None, secret=None, log_file=None)
+                            data_dir=None, key='beaker.session.id',
+                            timeout=None, save_accessed_time=True, secret=None,
+                            log_file=None)
 
         # Pull out any config args meant for beaker session. if there are any
         for dct in [config, kwargs]:
