@@ -1,3 +1,11 @@
+Release $next
+=============
+
+* Sessions have a new option save_accessed_time which defaults to true for
+  backwards compatibility. Set to false to tell beaker not to add _accessed_time
+  to the session and the last_accessed attribute. This lets you avoid session
+  writes for requests that don't otherwise update the session.
+
 Release 1.8.0 (2016-01-26)
 ==========================
 
